# basic_cpp_cmake

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
tests/: CMakeLists.txt  test.cpp
